# todo-python

./: .gitignore  AGENTS.md  pyproject.toml  test.ipynb
dev/: websocket_port.py
dev/fastapi_websocket_port/: conftest.py  test_fastapi_websocket_adapter.py
dev/openai_connect/: conftest.py  test_connect.py
dev/questionnaire/: conftest.py  test_questionnaire.py
dev/session/: conftest.py  test_session.py
dev/session_agent_questionnaire/: conftest.py  test_session.py
dev/websockets_websocket_port/: conftest.py  test_wesockets_websocket_adapter.py
src/realtime/: __init__.py
src/realtime/services/: __init__.py  openai.py
src/realtime_agent/: __init__.py  questionnaire.py  scaffolding.py  session.py
src/realtime_agent/adapters/: __init__.py  fastapi.py  websockets.py
src/realtime_agent/services/: __init__.py  openai.py
tests/: test_questionnaire.py  test_scaffolding.py  test_session.py
tests/adapters/: test_fastapi_websocket_port.py  test_websockets_websocket_port.py
tests/services/: test_openai.py
