[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "realtime_agent"
version = "0.1.0"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "James Bower", email = "james.bower@xanda.net" }]
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "fastapi[all]",
    "jinja2",
    "websockets",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "pytest-timeout",
    "httpx"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests", "spec", "dev"]

